Update Boombikes linear Regression Assignment.ipynb

--- a/Boombikes linear Regression Assignment.ipynb
+++ b/Boombikes linear Regression Assignment.ipynb
@@ -8,7 +8,7 @@
     "## Boom Bikes Linear Regression Assignment \n",
     "### Introduction: \n",
     "\n",
-    "Boob Bikes is a US bike-sharing provider in which bikes are made available for shared use to individuals on a short term basis for a price or free. Many bike share systems allow people to borrow a bike from a \"dock\" which is usually computer-controlled wherein the user enters the payment information, and the system unlocks it. This bike can then be returned to another dock belonging to the same system.\n",
+    "Boom Bikes is a US bike-sharing provider in which bikes are made available for shared use to individuals on a short term basis for a price or free. Many bike share systems allow people to borrow a bike from a \"dock\" which is usually computer-controlled wherein the user enters the payment information, and the system unlocks it. This bike can then be returned to another dock belonging to the same system.\n",
     "\n",
     "### Problem Statement: \n",
     "\n",
